kubernetes/development/nginx-deployment.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: development
  labels:
    app: nginx-gsx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-gsx
  template:
    metadata:
      labels:
        app: nginx-gsx
    spec:
      containers:
        - name: nginx-container
          image: omiralles03/nginx-gsx:v1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
