kubernetes/development/nginx-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: gsx-nginx-service
  namespace: development
spec:
  selector:
    app: nginx-gsx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
