kubernetes/development/net-dev-policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-allow-devs-partners
  namespace: development
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
          # all access
    - from:
        - ipBlock:
            cidr: 10.0.10.0/24 # Partners
        - ipBlock:
            cidr: 10.0.100.0/24 # Devs
  egress:
    # Allow outer connection
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.3.0/24 # Production subnet
